<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentBanda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BandaFragment">

    <EditText
        android:id="@+id/etNomeBanda"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="78dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/btnModificarBanda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCodigoBanda" />

    <EditText
        android:id="@+id/etCodigoBanda"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBuscarBanda"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarBanda"
        app:layout_constraintStart_toStartOf="@+id/etNomeBanda" />

    <Button
        android:id="@+id/btnBuscarBanda"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="23dp"
        android:text="@string/btnBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnModificarBanda"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btnModificar"
        app:layout_constraintBottom_toBottomOf="@+id/btnInserirBanda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnInserirBanda" />

    <Button
        android:id="@+id/btnListarBanda"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btnListar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnInserirBanda"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="39dp"
        android:text="@string/btnInserir"
        app:layout_constraintBottom_toTopOf="@+id/btnExcluirBanda"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnExcluirBanda"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:text="@string/btnExcluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvListarBanda"
        android:layout_width="0dp"
        android:layout_height="261dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>