<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentCalendario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarioFragment">

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/cvCalendario"
        android:layout_width="0dp"
        android:layout_height="347dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mcv_selectionColor="#00F"
        app:mcv_showOtherDates="all" />

    <Button
        android:id="@+id/btnAgendarCalendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="115dp"
        android:text="@string/btnAgendarCalendario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAgendamentoCalendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="42dp"
        android:text="@string/tvAgendamentoCalendario"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConsultarCalendario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:text="@string/btnConsultarCalendario"
        app:layout_constraintBottom_toBottomOf="@+id/btnAgendarCalendario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnAgendarCalendario" />

</androidx.constraintlayout.widget.ConstraintLayout>